# gles-thingy

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE
engine/: CMakeLists.txt
engine/src/: main.c
engine/src/game/: direction.c  direction.h  enemy.c  enemy.h  game_state.c  game_state.h  input_state.h  player.c  player.h  playfield.c  playfield.h  playfield_fill.c
engine/src/graphics/: framebuffer.c  framebuffer.h  game_state_renderer.c  game_state_renderer.h  gles_utils.c  gles_utils.h
engine/src/math/: ivec2.h
engine/src/utils/: array.h  common.h  frame_counter.c  frame_counter.h
